--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,51 +1,62 @@
-<div class="card">
-  <div class="card-header">
-    <h3>Lets get Started</h3>
-    <p1>take a momment to create an account with us</p1>
+<!DOCTYPE html>
+<html>
+<head>
+  <style>
+/*    .Name {display: inline-block; width:49%;}
+    .Name .cf-medium {width:130%;}
+    .Name label {display: block !important; width: 150% !important;}*/
+
+  </style>
+</head>
+  <body>
+  <div class="card">
+    <div class="card-header"><center>
+      <h3 class="center">Lets get Started</h3>
+      <p1>Take a momment to create an account with us</p1>
+    </center></div>
+
+    <div class="card-body">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
+      <div class="field form-group">
+        <%=f.label :first_name %>
+        <%= f.text_field :first_name, class: 'form-control',placeholder:"First Name" %>
+      </div>
+      <div class="field form-group">
+        <%= f.label :last_name %>
+        <%= f.text_field :last_name, class: 'form-control',placeholder:"Last Name" %>
+      </div>
+      <div class="field form-group">
+        <%= f.label :email %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control',placeholder:"Email" %>
+      </div>
+      <div class="field form-group">
+        <%= f.label :country %>
+        <%= f.country_select :country, class: 'form-control',prompt:"Select Country" %>
+      </div>
+      <div class="field form-group">
+        <%= f.label :phone %>
+        <%= f.text_field :phone, class: 'form-control',placeholder:"70 123 4567" %>
+      </div>
+      <div class="field form-group">
+        <% f.label :password %>
+        <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %><br />
+        <%= f.password_field :password, autocomplete: "new-password", class: 'form-control',placeholder:"Password" %>
+      </div>
+
+      <div class="field form-group">
+        <% f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control',placeholder:"Password Confirmation" %>
+      </div></br>
+      <div class="actions">
+        <%= f.submit "Sign up", class:"btn btn-secondary" %>
+      </div>
+      <% end %>
+
+    </div>
   </div>
-
-  <div class="card-body">
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
-    <div class="field form-group">
-      <%=f.label :first_name %>
-      <%= f.text_field :first_name, class: 'form-control',placeholder:"First Name" %>
-    </div>
-
-    <div class="field form-group">
-      <% f.label :email %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control',placeholder:"Email" %>
-    </div>
-
-    <div class="field form-group">
-      <%= f.label :last_name %>
-      <%= f.text_field :last_name, class: 'form-control',placeholder:"Last Name" %>
-    </div>
-    <div class="field form-group">
-      <%= f.label :country %>
-      <%= f.text_field :country, class: 'form-control',placeholder:"Last Name" %>
-    </div>
-    <div class="field form-group">
-      <%= f.label :phone %>
-      <%= f.text_field :phone, class: 'form-control',placeholder:"70 123 4567" %>
-    </div>
-    <div class="field form-group">
-      <% f.label :password %>
-      <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %><br />
-      <%= f.password_field :password, autocomplete: "new-password", class: 'form-control',placeholder:"Password" %>
-    </div>
-
-    <div class="field form-group">
-      <% f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control',placeholder:"Password Confirmation" %>
-    </div></br>
-    <div class="actions">
-      <%= f.submit "Sign up", class:"btn btn-secondary" %>
-    </div>
-    <% end %>
-
-  </div>
-</div>
-<%= render "devise/shared/links" %>
+  <%= render "devise/shared/links" %>
+  </body>
+</html>
