--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd; color: green;">
   <div class="container-fluid">
     <%= link_to 'Global Encounter', root_path, class:"navbar-brand"%>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,7 +25,7 @@
         </li>
         <%# end %>
       </ul>
-      <%= link_to 'Sign Up', new_user_registration_path, class:"nav-link btn btn-success"%>
+      <%= link_to 'Sign Up', new_user_registration_path, class:"nav-link btn btn-outline-success"%>
       <!--form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
