fixes: PR1 Issue Resolved(1)

--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,19 +1,5 @@
-<style>
-  .container1
-  {
-    display: flex;
-    flex-direction: column;
-    justify-items: space-between;
-    align-items: center;
-    margin: auto;
-  }
-  .container1_item
-  {
-    width: 500px;
-    height: 100px;
-  }
-</style>
-<div class="container1 container1_item">
+
+<div class="containerl containerl_item">
   </br>
   <%- if controller_name != 'sessions' %>
   <%= link_to "Log in", new_session_path(resource_name) %><br />
