--- a/app/views/layouts/_alerts.html.erb
+++ b/app/views/layouts/_alerts.html.erb
@@ -1,6 +1,10 @@
-<div class="alert alert-warning alert-dismissible fade show" role="alert">
-  <%= notice %>
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
-</div>
+<% if flash[:notice] %>
+  <div class="alert alert-info mt-4" role="alert">
+    <%= flash[:notice]  %>
+  </div>
+<% end %>
+<% if flash[:alert] %>
+  <div class="alert alert-danger mt-4" role="alert">
+    <%= flash[:alert] %>
+  </div>
+<% end %>
