--- a/app/views/layouts/_alerts.html.erb
+++ b/app/views/layouts/_alerts.html.erb
@@ -1,10 +1,5 @@
-<% if flash[:notice] %>
-  <div class="alert alert-info mt-4" role="alert">
-    <%= flash[:notice]  %>
-  </div>
-<% end %>
-<% if flash[:alert] %>
-  <div class="alert alert-danger mt-4" role="alert">
-    <%= flash[:alert] %>
+<% flash.each do |type, msg| %>
+  <div class="alert alert-info">
+    <%= msg %>
   </div>
 <% end %>
