--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -1,3 +1,27 @@
 <h3>
-  Admins Login Page
-</h3>
+  <center>
+    Hello <%= current_user.first_name %> (<%= current_user.email %>) Welocome to Camp Encounter
+    </br>
+    List Of Registered Users Given Below
+  </center>
+</h3></br>
+<table class="table table-striped table-bordered table-hover">
+  <thead class="table-dark">
+    <tr>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Email</th>
+      <th>phone No</th>
+      <th>Country Code</th>
+      <th>Country</th>
+      <th colspan="3"> </th>
+    </tr>
+  </thead>
+<tbody>
+  <%= render @users %>
+</tbody>
+</table>
+<center>
+  <%= pagy_bootstrap_nav(@pagy).html_safe %>
+</center>
+<br><br><br>
