--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <%= link_to 'Global Encounter', root_path, class: "navbar-brand"%>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,7 +19,9 @@
         </li>
         <% end %>
       </ul>
-      <%= link_to 'Sign Up', new_user_registration_path, class: "nav-link btn btn-outline-success"%>
+      <%if !user_signed_in? %>
+        <%= link_to 'Sign Up', new_user_registration_path, class: "nav-link btn btn-outline-success"%>
+      <% end %>
     </div>
   </div>
 </nav>
