--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -5,6 +5,12 @@
     List Of Registered Users Given Below
   </center>
 </h3></br>
+<div class="col-md-4">
+  <%= form_with(url: admins_path, method: :get) do |f| %>
+    <%= f.text_field :query, class: 'search-bar', placeholder: 'Search by Name, Email, country, or phone' %>
+    <%= f.submit "Search", class: 'btn btn-secondary' %>
+  <% end %>
+</div></br>
 <table class="table table-striped table-bordered table-hover">
   <thead class="table-dark">
     <tr>
@@ -17,9 +23,9 @@
       <th colspan="3"> </th>
     </tr>
   </thead>
-<tbody>
-  <%= render @users %>
-</tbody>
+  <tbody>
+    <%= render 'users', users: @users %>
+  </tbody>
 </table>
 <center>
   <%= pagy_bootstrap_nav(@pagy).html_safe %>
