--- a/app/views/admins/users/_users.html.erb
+++ b/app/views/admins/users/_users.html.erb
@@ -8,7 +8,7 @@
     <td><%= user.country %></td>
     <% link_to 'Edit', edit_user_registration_path(user), class: "btn btn-secondary" %>
     <% if user.role == 'user' %>
-      <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-outline-danger btn-sm" %></td>
+      <td><%= link_to 'Destroy', admins_user_path(user), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-outline-danger btn-sm" %></td>
     <% end %>
   </tr>
 <% end %>
