--- a/app/views/admins/users/index.html.erb
+++ b/app/views/admins/users/index.html.erb
@@ -5,11 +5,12 @@
     List Of Registered Users Given Below
   </center>
 </h3></br>
-<div class="d-flex justify-content-center">
+<div class="d-flex justify-content-between">
   <%= form_with(url: admins_users_path, method: :get) do |f| %>
   <%= f.text_field :query, class: 'search-bar', placeholder: 'Search by Name, Email, country, or phone', size: '35' %>
   <%= f.submit "Search", class: 'btn btn-dark' %>
   <% end %>
+  <%= link_to 'Export CSV', admins_users_path(format: :csv), class: 'btn btn-dark' %>
 </div></br>
 <table class="table table-striped table-bordered table-hover">
   <thead class="table-dark">
@@ -28,6 +29,8 @@
   </tbody>
 </table>
 <center>
-  <%= pagy_bootstrap_nav(@pagy).html_safe %>
+  <div>
+    <%= pagy_bootstrap_nav(@pagy).html_safe %></br>
+  </div>
 </center>
 <br><br><br>
