--- a/app/views/admins/users/_users.html.erb
+++ b/app/views/admins/users/_users.html.erb
@@ -6,9 +6,13 @@
     <td><%= user.phone %></td>
     <td><%= user.country_code %></td>
     <td><%= user.country %></td>
-    <% link_to 'Edit', edit_user_registration_path(user), class: "btn btn-secondary" %>
+    <td><%= link_to 'View', admins_user_path(user), class: "btn btn-outline-dark btn-sm" %></td>
+    <%if !user.admin? %>
+      <td><%= link_to 'Edit', edit_admins_user_path(user), class: 'btn btn-outline-warning' %></td>
+    <% end %>
     <% if user.role == 'user' %>
       <td><%= link_to 'Destroy', admins_user_path(user), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-outline-danger btn-sm" %></td>
     <% end %>
+
   </tr>
 <% end %>
