feat: admin add camp and its listing with edit and delete camps

--- a/app/views/admins/users/index.html.erb
+++ b/app/views/admins/users/index.html.erb
@@ -1,6 +1,7 @@
 <h3>
   <center>
-    Hello <%= current_user.first_name %> (<%= current_user.email %>) Welocome to Camp Encounter
+    Hello <%= current_user.first_name + ' ' + current_user.last_name%> (<%= current_user.email %>) <br>
+    Welocome to Camp Encounter
     </br>
     List Of Registered Users Given Below
   </center>
