--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -16,6 +16,14 @@
           <li class="nav-item">
             <%= link_to 'view Profile', user_path(current_user), class: "nav-link"%>
           </li>
+          <% if current_user.admin? %>
+            <li class="nav-item">
+              <%= link_to 'view Camps', admins_camps_path, class: "nav-link"%>
+            </li>
+            <li class="nav-item">
+              <%= link_to 'view Users', admins_users_path, class: "nav-link"%>
+            </li>
+          <% end %>
         <% else %>
         <li class="nav-item">
           <%= link_to 'Sign In', new_user_session_path, class: "nav-link"%>
