--- a/app/views/admins/camps/index.html.erb
+++ b/app/views/admins/camps/index.html.erb
@@ -15,10 +15,10 @@
 <table class="table table-striped table-bordered table-hover">
   <thead class="table-dark">
     <tr>
-      <th><%= link_to 'Name', admins_camps_path, class: 'btn btn-outline-light' %></th>
-      <th><%= link_to 'Type', admins_camps_path, class: 'btn btn-outline-light' %></th>
-      <th><%= link_to 'Start Date', admins_camps_path, class: 'btn btn-outline-light' %></th>
-      <th><%= link_to 'End Date', admins_camps_path, class: 'btn btn-outline-light' %></th>
+      <th><%= link_to 'Name', admins_camps_path(sorting_column: "name", sort_type: get_sort_type('name')), class: 'btn btn-outline-light' %></th>
+      <th><%= link_to 'Type', admins_camps_path(sorting_column: "camp_type", sort_type: get_sort_type('camp_type')), class: 'btn btn-outline-light' %></th>
+      <th><%= link_to 'Start Date', admins_camps_path(sorting_column: "start_date", sort_type: get_sort_type('start_date')), class: 'btn btn-outline-light' %></th>
+      <th><%= link_to 'End Date', admins_camps_path(sorting_column: "end_date", sort_type: get_sort_type('end_date')), class: 'btn btn-outline-light' %></th>
       <th><%= link_to 'Locations', admins_camps_path, class: 'btn btn-outline-light' %></th>
       <th>Camp Id</th>
       <th colspan="3"> </th>
