--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -18,10 +18,13 @@
           </li>
           <% if current_user.admin? %>
             <li class="nav-item">
-              <%= link_to 'view Camps', admins_camps_path, class: "nav-link"%>
+              <%= link_to 'Camps', admins_camps_path, class: "nav-link"%>
             </li>
             <li class="nav-item">
-              <%= link_to 'view Users', admins_users_path, class: "nav-link"%>
+              <%= link_to 'Users', admins_users_path, class: "nav-link"%>
+            </li>
+            <li class="nav-item">
+              <%= link_to 'Locations', admins_locations_path, class: "nav-link"%>
             </li>
           <% end %>
         <% else %>
