fixes: PR1 Issue resolved

--- a/app/assets/stylesheets/sign_in.scss
+++ b/app/assets/stylesheets/sign_in.scss
@@ -1,5 +1,4 @@
-.container_sign_in
-{
+.container-sign-in {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -7,8 +6,7 @@
   margin: auto;
 }
 
-.container_sign_in_item
-{
+.container-sign-in-item {
   width: 500px;
   height: 100px;
 }
