--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-light">
   <div class="container-fluid">
     <%= link_to 'Global Encounter', root_path, class: "navbar-brand"%>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-supported-content" aria-controls="navbar-supported-content" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse" id="navbar-supported-content">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <%if user_signed_in? %>
           <li class="nav-item">
