feat: user select camp added

--- a/app/views/admins/camps/show.html.erb
+++ b/app/views/admins/camps/show.html.erb
@@ -15,7 +15,7 @@
             </tr>
             <tr>
               <th scope="row">Type</th>
-              <td><%= @camp.type %></td>
+              <td><%= @camp.camp_type %></td>
             </tr>
             <tr>
               <th scope="row"> Start Date</th>
