--- a/app/views/camps/index.html.erb
+++ b/app/views/camps/index.html.erb
@@ -1,33 +1,31 @@
-<p id="notice"><%= notice %></p>
+<div class="row d-flex justify-content-center align-items-center h-100">
+  <div class="col-lg-8 col-xl-6">
+    <div class="card rounded-3">
+        <center><h2>Select Camps</h2></center>
+      <div class="card-body p-4 p-md-5 bg-light">
+        <hr>
+        <table class="table table-striped table-bordered table-hover">
+          <thead class="table-dark">
+            <tr>
+              <th>Name</th>
+              <th>Enroll</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @camps.each do |camp| %>
+              <tr>
+                <td><%= camp.name %></td>
+                <td>
+                  <%if current_user.user? %>
+                    <%= link_to 'Select', camp, class: 'btn btn-outline-dark' %>
+                  <% end %>
+                </td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
 
-<h1>Camps</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Start date</th>
-      <th>End date</th>
-      <th>Type</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @camps.each do |camp| %>
-      <tr>
-        <td><%= camp.name %></td>
-        <td><%= camp.start_date %></td>
-        <td><%= camp.end_date %></td>
-        <td><%= camp.type %></td>
-        <td><%= link_to 'Show', camp %></td>
-        <td><%= link_to 'Edit', edit_camp_path(camp) %></td>
-        <td><%= link_to 'Destroy', camp, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Camp', new_camp_path %>
