--- a/app/views/camps/show.html.erb
+++ b/app/views/camps/show.html.erb
@@ -22,7 +22,9 @@
           I AKNOWLEDGE AND AGREE THAT ANY INFORMATION PROVIDED IN THIS APPLICATION WILL BE COLLECTED AND PROCESSED IN ACCORDANCE WITH THE <%= link_to "PRIVACY POLICY", "https://ge-stage-2019.herokuapp.com/privacy_policy" %>.</p>
         </p>
           <%= @camp.name %><div></div>
+
           <%= link_to 'Back', camps_path, class: "btn btn-outline-dark" %>
+          <%= link_to "Start Application", start_application_camp_path, method: :post %>
       </div>
     </div>
   </div>
