feat: hide dashboard step if application submitted, show percentage, and progress bar added

--- a/app/views/admins/camps/show.html.erb
+++ b/app/views/admins/camps/show.html.erb
@@ -27,7 +27,7 @@
             </tr>
             <tr>
               <th scope="row">Locations</th>
-              <td><% camp.locations.each do |l|%>
+              <td><% @camp.locations.each do |l|%>
                 <%= l.name %>
                 <%= "|" %>
                 <%end%>
