--- a/app/views/camps/index.html.erb
+++ b/app/views/camps/index.html.erb
@@ -17,6 +17,7 @@
                 <td><%= camp.name %></td>
                 <td>
                   <%if current_user.user? %>
+                    <%#byebug%>
                     <%= link_to 'Select', camp, class: 'btn btn-outline-dark' %>
                   <% end %>
                 </td>
