--- a/app/views/user_applications/step_five.html.erb
+++ b/app/views/user_applications/step_five.html.erb
@@ -19,11 +19,11 @@
           <div class="col-md-6 mb-4">
             <div class="form-outline">
                 <div class="field">
-                  <%= f.label :Dinner %><br />
-                  <%= f.label :Dinner, "Yes", value: true  %>
-                  <%= f.radio_button :Dinner, true %>
-                  <%= f.label :Dinner, "No", value: false %>
-                  <%= f.radio_button :Dinner, false, checked: true %>
+                  <%= f.label :dinner %><br />
+                  <%= f.label :dinner, "Yes", value: true  %>
+                  <%= f.radio_button :dinner, true %>
+                  <%= f.label :dinner, "No", value: false %>
+                  <%= f.radio_button :dinner, false, checked: true %>
                 </div>
             </div>
           </div>
