--- a/app/views/user_applications/step_two.html.erb
+++ b/app/views/user_applications/step_two.html.erb
@@ -31,7 +31,7 @@
         <div></div>
         <div class="actions">
           <%= f.submit class: "btn btn-success" %>
-          <%#= link_to 'Back', admins_camps_path, class: "btn btn-dark" %>
+          <%= link_to "Skip", wizard_path(:experience, enrolment: @enrolment), class: "btn btn-info" %>
         </div>
       </div>
     </div>
