--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -1,10 +1,10 @@
 <h3>
   <center>
     Hello <%= current_user.first_name %> (<%= current_user.email %>) Welocome to Camp Encounter
-    </br>
+    <div></div>
     List Of Registered Users Given Below
   </center>
-</h3></br>
+</h3><div></div>
 <table class="table table-striped table-bordered table-hover">
   <thead class="table-dark">
     <tr>
@@ -24,4 +24,5 @@
 <center>
   <%= pagy_bootstrap_nav(@pagy).html_safe %>
 </center>
-<br><br><br>
+<div class="mb-3"></div>
+<div class="mb-3"></div>
