--- a/app/views/admins/users/index.html.erb
+++ b/app/views/admins/users/index.html.erb
@@ -30,4 +30,5 @@
 <center>
   <%= pagy_bootstrap_nav(@pagy).html_safe %>
 </center>
-<br><br><br>
+<div class="mb-3"></div>
+<div class="mb-3"></div>
