--- a/app/views/user_applications/step_four.html.erb
+++ b/app/views/user_applications/step_four.html.erb
@@ -26,7 +26,8 @@
         <div></div>
         <div class="actions">
           <%= f.submit class: "btn btn-success" %>
-          <%#= link_to 'Back', admins_camps_path, class: "btn btn-dark" %>
+          <%= link_to "Skip", wizard_path(:step_five, user_application: @user_application), class: "btn btn-info" %>
+          <%= link_to "previous", wizard_path(:step_three, user_application: @user_application), class: "btn btn-outline-dark" %>
         </div>
       </div>
     </div>
