--- a/app/views/user_applications/step_one.html.erb
+++ b/app/views/user_applications/step_one.html.erb
@@ -32,7 +32,7 @@
         <div></div>
         <div class="actions">
           <%= f.submit class: "btn btn-success" %>
-          <%#= link_to 'Back', admins_camps_path, class: "btn btn-dark" %>
+          <%= link_to "Skip", wizard_path(:step_two, user_application: @user_application), class: "btn btn-info" %>
         </div>
       </div>
     </div>
