--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -21,8 +21,8 @@
   <%= render @users %>
 </tbody>
 </table>
-<center>
-  <%= pagy_bootstrap_nav(@pagy).html_safe %>
-</center>
-<div class="mb-3"></div>
-<div class="mb-3"></div>
+<div class="mb-5">
+  <center class="mb-3">
+    <%= pagy_bootstrap_nav(@pagy).html_safe %>
+  </center>
+</div>
