--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -19,7 +19,7 @@
         </li>
         <% end %>
       </ul>
-      <%if !user_signed_in? %>
+      <% unless user_signed_in? %>
         <%= link_to 'Sign Up', new_user_registration_path, class: "nav-link btn btn-outline-success" %>
       <% end %>
     </div>
