--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -1,11 +1,14 @@
 <h3>
   <center>
-    Hello <%= current_user.first_name %> (<%= current_user.email %>) Welocome to Camp Encounter
-    <div></div>
-    List Of Registered Users Given Below
+    <div class="mt-3">
+      Hello <%= current_user.first_name %> (<%= current_user.email %>) Welocome to Camp Encounter
+    </div>
+    <div>
+      List Of Registered Users Given Below
+    </div>
   </center>
-</h3><div></div>
-<table class="table table-striped table-bordered table-hover">
+</h3>
+<table class="table table-striped table-bordered table-hover mt-3">
   <thead class="table-dark">
     <tr>
       <th>First Name</th>
