fixes: code refactored

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,7 +19,7 @@
           <%= f.label "password" %>
           <%= f.password_field :password, autocomplete: "new-password", class: 'form-control', placeholder: "Password", required: true %>
         </div>
-        <div class="field form-group  item mb-3">
+        <div class="field form-group item mb-3">
           <%= f.label "Last Name" %>
           <%= f.text_field :last_name, class: 'form-control mb-3', placeholder: "Last Name", required: true %>
           <%= f.label "country" %>
@@ -47,13 +47,13 @@
             <%= f.submit "Sign up", class: "btn btn-success" %>
           </span>
           <div class="form-check mt-3">
-            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flex-radio-default1">
+            <input class="form-check-input" type="radio" name="flex-radio-default" id="flex-radio-default1">
             <label class="form-check-label" for="flex-radio-default1">
               I Agree
             </label>
           </div>
           <div class="form-check ">
-            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flex-radio-default2" checked>
+            <input class="form-check-input" type="radio" name="flex-radio-default" id="flex-radio-default2" checked>
             <label class="form-check-label" for="flex-radio-default2">I Don't Agree
             </label>
           </div>
