--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -6,7 +6,7 @@
   <td><%= user.country_code %></td>
   <td><%= user.country %></td>
   <% link_to 'Edit', edit_user_registration_path(user), class: "btn btn-secondary" %>
-  <% if user.user? %>
+  <% if user.standard_user? %>
     <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-outline-danger btn-sm" %></td>
   <% end %>
 </tr>
