--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -1,17 +1,17 @@
-<h3>
+<h3 class="mb-3">
   <center>
-    Hello <%= current_user.first_name %> (<%= current_user.email %>) Welocome to Camp Encounter
-    <div></div>
+    <div>
+      Hello <%= current_user.first_name %> (<%= current_user.email %>) Welocome to Camp Encounter
+    </div>
     List Of Registered Users Given Below
   </center>
-</h3><div></div>
-<div class="col-md-4">
+</h3>
+<div class="col-md-4 mb-3">
   <%= form_with(url: admins_path, method: :get) do |f| %>
     <%= f.text_field :query, class: 'search-bar', placeholder: 'Search by Name, Email, country, or phone' %>
     <%= f.submit "Search", class: 'btn btn-secondary' %>
   <% end %>
-</div><div></div>
-</h3><div></div>
+</div>
 <table class="table table-striped table-bordered table-hover">
   <thead class="table-dark">
     <tr>
@@ -28,8 +28,8 @@
     <%= render 'users', users: @users %>
   </tbody>
 </table>
-<center>
-  <%= pagy_bootstrap_nav(@pagy).html_safe %>
-</center>
-<div class="mb-3"></div>
-<div class="mb-3"></div>
+<div class="mb-5">
+  <center class="mb-5">
+    <%= pagy_bootstrap_nav(@pagy).html_safe %>
+  </center>
+</div>
