--- a/app/views/user_applications/step_four.html.erb
+++ b/app/views/user_applications/step_four.html.erb
@@ -19,7 +19,7 @@
           <div class="col-md-6 mb-4">
             <div class="form-outline">
                 <%= f.label "Food Choice" %><br />
-                <%= f.select :food_options, ["Vegetarian", "Non-Vegetarian"], autofocus: true, prompt: "Select Choice", size:"25" %>
+                <%= f.select :food_options, ["Vegetarian", "Non-Vegetarian", "Both"], autofocus: true, prompt: "Select Choice", size:"25" %>
             </div>
           </div>
         </div>
