--- a/app/views/admins/user_applications/edit.html.erb
+++ b/app/views/admins/user_applications/edit.html.erb
@@ -1,9 +1,9 @@
-<%= form_with(model: @user_application, url: admins_user_applications_path) do |f| %>
-  <% if @user.errors.any? %>
+<%= form_with(model: @user_application, url: admins_user_application_path) do |f| %>
+  <% if @user_application.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+      <h2><%= pluralize(@user_application.errors.count, "error") %> prohibited this user from being saved:</h2>
       <ul>
-        <% @user.errors.each do |error| %>
+        <% @user_application.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
       </ul>
@@ -12,57 +12,73 @@
   <div class="row d-flex justify-content-center align-items-center h-100">
     <div class="col-lg-8 col-xl-6">
       <div class="card rounded-3">
-        <center><h2> Edit User_Application</h2></center>
+        <center><h2> Edit User Application</h2></center>
         <div class="card-body p-4 p-md-5 bg-light">
-          <div class="row">
-            <div class="col-md-6 mb-4">
-              <div class="form-outline">
-                  <%= f.label :first_name %><br />
-                  <%= f.text_field :first_name, autofocus: true, placeholder: "first_name", size:"25" %>
+          <% if @user_application.progress_bar == 100 %>
+            <div class="row">
+              <div class="col-md-6 mb-4">
+                <div class="form-outline">
+                  <div class="field">
+                    <%= f.label :dinner %><br />
+                    <%= f.label :dinner, "Yes"  %>
+                    <%= f.radio_button :dinner, true %>
+                    <%= f.label :dinner, "No" %>
+                    <%= f.radio_button :dinner, false %>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 mb-4">
+                <div class="form-outline">
+                  <div class="field">
+                    <%= f.label :lunch %><br />
+                    <%= f.label :lunch, "Yes"  %>
+                    <%= f.radio_button :lunch, true %>
+                    <%= f.label :lunch, "No" %>
+                    <%= f.radio_button :lunch, false %>
+                  </div>
+                </div>
               </div>
             </div>
-            <div class="col-md-6 mb-4">
-              <div class="form-outline">
-                <%= f.label :last_name %><br />
-                <%= f.text_field :last_name, autofocus: true, placeholder: "last_name", size: "25" %>
+            <div class="row">
+              <div class="col-md-6 mb-4">
+                <div class="form-outline">
+                  <%= f.label "Food Choice" %><br />
+                  <%= f.select :food_options, ["Vegetarian", "Non-Vegetarian", "Both"], autofocus: true, prompt: "Select Choice", size:"25" %>
+                </div>
+              </div>
+              <div class="col-md-6 mb-4">
+                <div class="form-outline">
+                  <div class="field">
+                    <%= f.label :wifi_service %><br />
+                    <%= f.label :wifi_service, "Yes" %>
+                    <%= f.radio_button :wifi_service, true %>
+                    <%= f.label :wifi_service, "No" %>
+                    <%= f.radio_button :wifi_service, false %>
+                  </div>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6 mb-4">
-              <div class="form-outline">
-                  <%= f.label :email %><br />
-                  <%= f.text_field :email, autofocus: true, placeholder: "user@email.com", size:"25" %>
+            <div class="row">
+              <div class="col-md-6 mb-4">
+                <div class="form-outline">
+                  <%= f.label "Shirt Size" %><br />
+                  <%= f.select :shirt_size, ["Small", "Medium", "Large", "XL", "XXL"], autofocus: true, prompt: "select Shirt Size", size:"25" %>
+                </div>
               </div>
             </div>
-            <div class="col-md-6 mb-4">
-              <div class="form-outline">
-                <%= f.label :phone_number %><br />
-                <%= f.text_field :country_code, autofocus: true, placeholder: "92", size: "5" %>
-                <%= f.text_field :phone, autofocus: true, placeholder: "323-555-0000", size: "18" %>
+            <div class="row">
+              <div class="col-md-6 mb-4">
+                <div class="form-outline">
+                  <%= f.label :insurance %><br />
+                  <%= f.select :insurance, ["Jubilee Life Insurance", "EFU Life Insurance", "Adamjee Insurance Company", "None"], autofocus: true, prompt: "select Insurance", size:"25" %>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6 mb-4">
-              <div class="form-outline">
-                  <%= f.label :country %><br />
-                  <%= f.country_select :country, autofocus: true, size:"20" %>
-              </div>
+            <br>
+            <div class="actions">
+              <%= f.submit class: "btn btn-success" %>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6 mb-4">
-              <div class="form-outline">
-                  <%= f.label :role %><br />
-                  <%= f.select :role, ['admin', 'user'], size: "10" %>
-              </div>
-            </div>
-          </div>
-          <br>
-          <div class="actions">
-            <%= f.submit class: "btn btn-success" %>
-          </div>
+          <% end %>
         </div>
       </div>
     </div>
